# FastApi---Projeto

./: .coverage  .env  .gitignore  auth_routes.py  banco.db  dependencies.py  main.py  order_routes.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 503d9187a335_adicionar_itens_ao_pedido.py  728134f94515_initial_migration.py  cee69469a586_adicionar_itens_ao_pedido.py
database/: models.py
src/fastaulas/: app.py  database.py  models.py  schemas.py
tests/: conftest.py  test_app.py
